--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
   <h2>Alimentação</h2>
-  <img src="img/logo.png" alt="Logo" />
+  <img src="logo.png" alt="Logo" />
   <div class="caption"><strong>Meu Prosa, Minha Vida</strong></div>
 
   <a href="quadra01.html" class="button">Quadra 01</a>
