--- a/alimentação.html
+++ b/alimentação.html
@@ -50,7 +50,7 @@
   <img src="logo.png" alt="Logo" />
   <div class="caption"><strong>Meu Prosa, Minha Vida</strong></div>
 
-  <a href="quadra01.html" class="button">Quadra 01</a>
+  <a href="alimentação01.pdf" class="button">Quadra 01</a>
   <a href="quadra02.html" class="button">Quadra 02</a>
   <a href="quadra03.html" class="button">Quadra 03</a>
 
