--- a/alimentação.html
+++ b/alimentação.html
@@ -51,8 +51,8 @@
   <div class="caption"><strong>Meu Prosa, Minha Vida</strong></div>
 
   <a href="alimentação01.pdf" class="button">Quadra 01</a>
-  <a href="quadra02.html" class="button">Quadra 02</a>
-  <a href="quadra03.html" class="button">Quadra 03</a>
+  <a href="alimentação02.pdf" class="button">Quadra 02</a>
+  <a href="alimentação03.pdf" class="button">Quadra 03</a>
 
 </body>
 </html>
