--- a/assistencia.html
+++ b/assistencia.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 
-  <h2>Alimentação</h2>
+  <h2>Assistência Técnica</h2>
   <img src="logo.png" alt="Logo" />
   <div class="caption"><strong>Meu Prosa, Minha Vida</strong></div>
 
