--- a/loja.html
+++ b/loja.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Loja</title>
+  <title>Loja de Variedades</title>
   <style>
     body {
       font-family: sans-serif;
@@ -46,7 +46,7 @@
 </head>
 <body>
 
-  <h2>Loja</h2>
+  <h2>Loja de Variedades</h2>
   <img src="logo.png" alt="Logo" />
   <div class="caption"><strong>Meu Prosa, Minha Vida</strong></div>
 
